@@ -78,6 +78,7 @@ Date: 2024-08-09
     - Buffed Spidertron's equipmen grid to 14x8.
     - Changed Polonium reactors neighbour bonus to 25%.
     - Buffed max length of the max tier undergrounds to 12.
+    - Deleted chalk.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
